tests/sumo/errors/routes/disconnected_off_customTeleport/tripinfos.sumo.meso
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-04-05 10:32:32 by Eclipse SUMO sumo Version v1_12_0+1949-1d2ae20f770
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
This file may also be made available under the following Secondary
Licenses when the conditions for such availability set forth in the Eclipse
Public License 2.0 are satisfied: GNU General Public License, version 2
or later which is available at
https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <processing>
        <ignore-route-errors value="true"/>
        <time-to-teleport value="100"/>
        <time-to-teleport.disconnected value="20"/>
        <default.speeddev value="0"/>
        <pedestrian.model value="nonInteracting"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <xml-validation.routes value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<tripinfos xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tripinfo_file.xsd">
    <tripinfo id="blocker" depart="0.00" departLane="" departPos="0.00" departSpeed="0.00" departDelay="0.00" arrival="418.00" arrivalLane="" arrivalPos="500.00" arrivalSpeed="27.80" duration="418.00" routeLength="500.00" waitingTime="0.00" waitingCount="0" stopTime="400.00" timeLoss="400.00" rerouteNo="0" devices="tripinfo_blocker routing_blocker" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="1" depart="0.00" departLane="" departPos="0.00" departSpeed="13.90" departDelay="0.00" arrival="421.00" arrivalLane="" arrivalPos="500.00" arrivalSpeed="27.80" duration="421.00" routeLength="1500.00" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="330.86" rerouteNo="0" devices="tripinfo_1" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="0" depart="0.00" departLane="" departPos="0.00" departSpeed="27.80" departDelay="0.00" arrival="438.00" arrivalLane="" arrivalPos="500.00" arrivalSpeed="27.80" duration="438.00" routeLength="1500.00" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="383.41" rerouteNo="0" devices="tripinfo_0" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
</tripinfos>
